# msg

./: .gitignore  Cargo.toml  README.md  build.rs  notes.md
.github/workflows/: rust.yml
src/: 4673459.json  app.rs  main.rs  old_app.rs
src/api/: mod.rs  rate_limiter.rs  schema.rs
src/app/: message.rs  mod.rs  state.rs  subscription.rs  update.rs  view.rs
src/app/view/: debug.rs  detail.rs  dtext.rs  followed.rs  grid.rs  settings.rs
src/core/: api.rs  blacklist.rs  config.rs  followed.rs  http.rs  lib.rs  media.rs  mod.rs  model.rs  store.rs  tracing.rs
src/core/api/: comments.rs  rate_limiter.rs
src/core/dtext/: model.rs  parser.rs  parsers.rs
src/core/dtext/parsers/: inline.rs
src/gui/: blacklist_editor.rs  detail_view.rs  mod.rs  post_tile.rs  settings.rs  thumbnail.rs  time_ago.rs  video_player.rs
src/util/: gstreamer_check.rs  mod.rs
