[package]
name = "msg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde", "std"] }
dotenvy = "0.15.7"
governor = "0.9.0"
iced = { version = "0.13.1", features = ["image"] }
json = "0.12.4"
md5 = "0.7.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
tokio = { version = "1", features = ["full"] }
tokio-rayon = "2.1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
