[package]
name = "msg"
version = "0.4.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
byte-unit = { version = "5.1.6", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde", "std"] }
clap = { version = "4.5.40", features = ["cargo"] }
directories = "6.0.0"
fs_extra = "1.3.0"
futures = "0.3.31"
glib = "0.20.9"
gstreamer = "0.23.5"
gstreamer-app = "0.23.5"
iced = { version = "0.13.1", features = ["image", "tokio", "advanced"] }
iced_aw = "0.12.2"
iced_gif = { version = "0.13.0", features = ["tokio"] }
iced_video_player = "0.6"
image = { version = "0.25.6", features = ["serde"] }
nom = "8.0.0"
once_cell = "1.21.3"
open = "5.3.2"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls", "stream"] }
rmp-serde = "1.3.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "parking_lot",
] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "fmt",
    "time",
    "std",
    "ansi",
] }
url = "2.5.4"

[dev-dependencies]
tempdir = "0.3"

[patch.crates-io]
iced_video_player = { git = "https://github.com/jazzfool/iced_video_player", branch = "master" }
